# GASquareMagic

./: CMakeLists.txt  Comparator.cpp  Comparator.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  Population.cpp  Population.h  main.cpp  teste.cpp  teste.h  timer.h
